Change navbar so issue with logout button aligning right on mobiles doesn't happen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -142,6 +142,11 @@ ul.navbar-nav li a {
     /* Vertically centers the links */
 }
 
+/* Logged in as prompt in top right */
+.logged-in-as {
+    color: #0a1a2a;
+}
+
 /* Footer Styles */
 footer {
     background-color: #FFD700;
